# aganitha_solution

./: README.md  pyproject.toml
aganitha_sonakshi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
